CMAKE_MINIMUM_REQUIRED(VERSION 2.6) 
PROJECT(libcylon)
SET(CYL_VERSION 0.0.1)
SET(CYL_SOVERSION 0)

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GLIB2 glib-2.0)
IF(BUILD_SHARED_LIBS)
	STRING(REPLACE ";" " " CYLON_CFLAGS "${GLIB2_CFLAGS}")
	STRING(REPLACE ";" " " CYLON_LDFLAGS "${GLIB2_LDFLAGS}")
	SET(CYLON_CFLAGS_LST ${GLIB2_CFLAGS})
	SET(CYLON_LDFLAGS_LST ${GLIB2_LDFLAGS})
ELSE()
	STRING(REPLACE ";" " " CYLON_CFLAGS "${GLIB2_STATIC_CFLAGS}")
	STRING(REPLACE ";" " " CYLON_LDFLAGS "${GLIB2_STATIC_LDFLAGS}")
	SET(CYLON_CFLAGS_LST ${GLIB2_CFLAGS})
	SET(CYLON_LDFLAGS_LST ${GLIB2_LDFLAGS})
ENDIF(BUILD_SHARED_LIBS)

OPTION(BUILD_SHARED_LIBS "Build static or shared libraries" ON)
MARK_AS_ADVANCED(BUILD_SHARED_LIBS)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(swig)
