ADD_LIBRARY(cylon cylon.c)
SET(HEADERS)
LIST(APPEND HEADERS cylon.h)
SET_TARGET_PROPERTIES(cylon PROPERTIES
	FRAMEWORK TRUE
	PUBLIC_HEADER "${HEADERS}"
	VERSION ${CYL_VERSION}
	SOVERSION ${CYL_SOVERSION})

INSTALL(TARGETS cylon
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib
	PUBLIC_HEADER DESTINATION include)
