ADD_LIBRARY(cylon cylon.c cylerrno.c)
INCLUDE(CheckCCompilerFlag RESULT_VARIABLE CHECKCCFLAG)
IF(NOT "${CHECKCCFLAG}" MATCHES "NOTFOUND")
	CHECK_C_COMPILER_FLAG("-std=c99" CYLON_C99)
	IF(CYLON_C99)
		SET(CYLON_CFLAGS "${CYLON_CFLAGS} -std=c99")
	ELSE()
		MESSAGE(MESSAGE "I don't know how to set c99 mode on your compiler. I'm going to hope it's always on and continue.")
	ENDIF(CYLON_C99)
ENDIF()
SET_TARGET_PROPERTIES(cylon PROPERTIES
	FRAMEWORK "TRUE"
	PUBLIC_HEADER "${HEADERS}"
	VERSION "${CYL_VERSION}"
	SOVERSION "${CYL_SOVERSION}"
	LINK_FLAGS "${CYLON_LDFLAGS}"
	COMPILE_FLAGS "${CYLON_CFLAGS}")

LIST(APPEND HEADERS cylon.h)
INSTALL(TARGETS cylon
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib
	PUBLIC_HEADER DESTINATION include)
