INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(/usr/include)

OPTION(ENABLE_SWIG "Enable swig support" ON)
IF(ENABLE_SWIG)
	# Is shared library support really required?
	#GET_PROPERTY(SHARED_LIBS GLOBAL PROPERTY TARGET_SUPPORTS_SHARED_LIBS)
	#IF(NOT SHARED_LIBS)
	#	MESSAGE(SEND_ERROR "Shared library support is required for SWIG bindings.")
	#ENDIF(NOT SHARED_LIBS)

	FIND_PACKAGE(SWIG REQUIRED)
	INCLUDE(${SWIG_USE_FILE})
	SET(CMAKE_SWIG_FLAGS "-O" CACHE STRING "SWIG Compile Flags")
	MARK_AS_ADVANCED(CMAKE_SWIG_FLAGS
		SWIG_DIR
		SWIG_EXECUTABLE
		SWIG_VERSION)
	LIST(APPEND CMAKE_SWIG_FLAGS "-importall")

	OPTION(ENABLE_PYTHON "Build python bindings" ON)
	IF(ENABLE_PYTHON)
		ADD_SUBDIRECTORY(python)
	ENDIF(ENABLE_PYTHON)

	OPTION(ENABLE_JAVA "Build java bindings" ON)
	IF(ENABLE_JAVA)
		ADD_SUBDIRECTORY(java)
	ENDIF(ENABLE_JAVA)

	OPTION(ENABLE_TCL "Build tcl bindings" ON)
	IF(ENABLE_TCL)
		ADD_SUBDIRECTORY(tcl)
	ENDIF(ENABLE_TCL)
ENDIF(ENABLE_SWIG)
