FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
SWIG_ADD_MODULE(cylon-python python ../cylon.i)
SWIG_LINK_LIBRARIES(cylon-python ${PYTHON_LIBRARIES} cylon)
SET_TARGET_PROPERTIES(${SWIG_MODULE_cylon-python_REAL_NAME}
	PROPERTIES OUTPUT_NAME "_cylon")

INSTALL(TARGETS ${SWIG_MODULE_cylon-python_REAL_NAME} LIBRARY DESTINATION lib/python)
INSTALL(FILES cylon.py DESTINATION lib/python)
